create about area, footer & scrool up

--- a/pricing.css
+++ b/pricing.css
@@ -43,3 +43,126 @@
 .card-body p {
     color: darkgrey;
 }
+
+.about-area {
+    position: relative;
+    padding: 150px 0 70px;
+}
+
+.download-button p {
+    font-size: 28px;
+    color: black;
+    line-height: 2px;
+    margin-right: 40px;
+    margin-top: 15px;
+}
+
+.download-button h5 {
+    font-size: 15px;
+    color: black;
+}
+
+.download-button .buttons i {
+    font-size: 50px;
+    color: #ccc2c2;
+    margin-right: 10px;
+    margin-left: 10px;
+    margin-top: 5px;
+}
+
+.download-button a {
+    text-decoration: none;
+    margin-top: 15px;
+}
+
+.buttons {
+    background-color: white;
+    border: 1px solid #ccc2c2;
+    border-radius: 10px;
+    margin-right: 20px;
+    width: 200px;
+
+
+}
+
+.buttons-android {
+    background-color: black;
+    border: 1px solid #ccc2c2;
+    border-radius: 10px;
+    margin-right: 20px;
+    width: 200px;
+
+}
+
+.download-button .buttons-android i {
+    font-size: 50px;
+    color: ghostwhite;
+    margin-right: 20px;
+    margin-left: 10px;
+    margin-top: 5px;
+}
+
+.download-button .buttons-android p {
+    font-size: 28px;
+    color: ghostwhite;
+    line-height: 2px;
+    margin-right: 40px;
+    margin-top: 15px;
+}
+
+.download-button .buttons-android h5 {
+    font-size: 15px;
+    color: ghostwhite;
+}
+
+#footer {
+    background-color: black;
+    color: white;
+}
+
+#footer2 {
+    margin-top: 50PX;
+}
+
+.buttons-footer {
+    background-color: rgb(43, 40, 40);
+    border: 1px solid rgb(43, 40, 40);
+    border-radius: 10px;
+    margin-right: 2px;
+    width: 180px;
+}
+
+.buttons-footer i {
+    font-size: 40px;
+    color: ghostwhite;
+    margin-right: 10px;
+    margin-left: 20px;
+    margin-top: 10px;
+}
+
+.buttons-footer p {
+    font-size: 24px;
+    color: ghostwhite;
+    line-height: 1px;
+    margin-right: 40px;
+    margin-top: 15px;
+}
+
+.buttons-footer h5 {
+    font-size: 13px;
+    color: ghostwhite;
+}
+
+#top-nav {
+    position: fixed !important;
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    z-index: 999;
+}
+
+#top-nav img {
+    height: 40px;
+    margin-bottom: 20px;
+    margin-right: 5px;
+}
