--- a/contact.css
+++ b/contact.css
@@ -10,7 +10,6 @@
 
 #tombol {
     margin-top: 10px;
-    /* margin-left: 220px; */
     float: right;
 }
 
@@ -29,4 +28,18 @@
 
 #footer2 {
     margin-top: 50PX;
+}
+
+#top-nav {
+    position: fixed !important;
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    z-index: 999;
+}
+
+#top-nav img {
+    height: 40px;
+    margin-bottom: 20px;
+    margin-right: 5px;
 }
